# diet-database

./: .env  Cargo.toml  Rocket.toml  justfile
api/: Cargo.toml
api/src/: db.rs
migrations/2020-12-28-143209_bowels/: down.sql  up.sql
migrations/2020-12-29-132246_store/: down.sql  up.sql
migrations/2020-12-29-132246_store/src/db/: schema.rs
migrations/2020-12-30-205417_grocery_trip/: down.sql  up.sql
migrations/2021-01-02-014013_metric/: down.sql  up.sql
migrations/2021-01-02-230644_drop_weight/: down.sql  up.sql
migrations/2021-01-03-153627_weight/: down.sql  up.sql
migrations/2021-01-11-151239_grocery_item/: down.sql  up.sql
migrations/2021-01-11-151239_grocery_item/src/db/: schema.rs
src/: bowel.rs  grocery_item.rs  grocery_trip.rs  lib.rs  metric.rs  store.rs  table.rs  weight.rs
src/db/: schema.rs
web/: Cargo.toml  index.css  index.html
web/scss/: index.scss
web/src/: api_call.rs  form.rs  lib.rs
web/src/form/: bowel.rs  input_data.rs  input_type.rs  mod.rs  store.rs
web/src/page/: bowel.rs  generic.rs  grocery_item.rs  grocery_trip.rs  metric.rs  mod.rs  store.rs  weight.rs
