[package]
name = "web"
version = "0.1.0"
authors = ["David Purdum <purdum41@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
diet_database = { path = ".." }
seed = "^0.8.0"
wasm-bindgen = "^0.2.68"
web-sys = "0.3.45"
chrono = "0.4"
serde = "1.0.118"
convert_case = "0.4.0"
